--- a/view/editor/editor.css
+++ b/view/editor/editor.css
@@ -29,7 +29,85 @@
 
 .teacss-ui .change-type-dialog .combo-item {
     width: 133px;
+    height: 100px;
+    border: none;
+    margin: 3px;
+    background: #EEEEEE;
 }
+
+.teacss-ui .change-type-dialog .combo-item::before  {
+    content: '';
+    height: 67px;
+    display: block;
+    box-shadow: 0 0 5px #B8B8B8;
+    margin-bottom: 7px;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Header::before  {
+    background: url(../../view/editor/assets/miniatures/header.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Order::before  {
+    background: url(../../view/editor/assets/miniatures/order.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Benefits::before  {
+    background: url(../../view/editor/assets/miniatures/benefits.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Services::before  {
+    background: url(../../view/editor/assets/miniatures/services.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Reasons::before  {
+    background: url(../../view/editor/assets/miniatures/reasons.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Gallery::before  {
+    background: url(../../view/editor/assets/miniatures/gallery.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Cases::before  {
+    background: url(../../view/editor/assets/miniatures/cases.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Stages::before  {
+    background: url(../../view/editor/assets/miniatures/stages.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Feedback::before  {
+    background: url(../../view/editor/assets/miniatures/feedback.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Map::before  {
+    background: url(../../view/editor/assets/miniatures/map.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Logos::before  {
+    background: url(../../view/editor/assets/miniatures/logos.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Footer::before  {
+    background: url(../../view/editor/assets/miniatures/footer.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Video::before  {
+    background: url(../../view/editor/assets/miniatures/video.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-TextBlock::before  {
+    background: url(../../view/editor/assets/miniatures/textBlock.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Timer::before  {
+    background: url(../../view/editor/assets/miniatures/timer.jpg) no-repeat;
+}
+
+.teacss-ui .change-type-dialog .combo-item.type-Numbers::before  {
+    background: url(../../view/editor/assets/miniatures/numbers.jpg) no-repeat;
+}
+
+
 
 .teacss-ui a.add-button {
     border-radius: 0;
