--- a/view/editor/style/page.css
+++ b/view/editor/style/page.css
@@ -50,7 +50,9 @@ ol li {
     color: #EA493C !important;
     font-family: "Arial";
     font-size: 12px;
-    padding-top: 2px;
+    line-height: 16px;
+    padding: 0;
+    height: 0;
     text-align: right;
 }
 
