--- a/view/editor/style/page.css
+++ b/view/editor/style/page.css
@@ -119,7 +119,7 @@ ol li {
 }
 
 /* add position: relative after publishing*/
-.order_6 .item > div{
+.order_5 .item > div, .benefits_2 .item > div, .benefits_3 .item > div, .text_block_6 .item > div{
     position: relative;
 }
 
@@ -583,7 +583,7 @@ ol li {
   height: 0;
 }
 
-.order_1 .title_1 .list div div:not([contenteditable]) {
+.order_1 .title_1 .list div div:not(.editor_text) {
   background: none  scroll 0 0 rgba(0, 0, 0, 0.75);
   display: table;
   font-family: "Open Sans Bold", "Arial";
@@ -596,7 +596,7 @@ ol li {
   
 }
 
-.order_1 .title_2 .list div div:not([contenteditable]) {
+.order_1 .title_2 .list div div:not(.editor_text) {
   background: none  scroll 0 0 rgba(0, 0, 0, 0.75);
   display: table;
   font-family: "Open Sans Light", "Arial";
