--- a/view/editor/editor.css
+++ b/view/editor/editor.css
@@ -1,3 +1,42 @@
+#beejee_info {
+  margin: 0 auto 0 450px;
+  width: 450px;
+  display: block;
+  z-index: 50000;
+  visibility: `;
+  position: absolute;
+}
+#beejee_info > div.title {
+  float: left;
+  margin-right: 20px;
+  margin-top: 5px;
+  color: white;
+  font-size: 16px;
+  font-family: "Arial";
+  font-weight: bold;
+}
+#beejee_info > div.title > .company_beejee{
+  color: #FFE900;
+  text-decoration: none;
+}
+
+#beejee_info > a.beejee {
+  background: transparent url('../../view/assets/images/logo-beejee.png') no-repeat;
+  border: none;
+  display: block;
+  height: 65px;
+  overflow: hidden;
+  text-indent: -2000px;
+  width: 66px;
+  float: left;
+  margin-right: 10px;
+}
+
+
+
+.frame-panel{
+    top: 75px !important;
+}
 #logged_info {    
     background: #333;
     border-bottom: 2px solid #777777;
@@ -19,6 +58,11 @@
 #logged_info a {
     color: #fff;
     text-decoration: none;
+}
+
+#logged_info a.home {
+    font-size: 16px;
+    margin-right: 10px;
 }
 
 .view-layout #logged_info {
@@ -112,7 +156,6 @@
     border-top: 5px solid #71a0d0 !important;
     border-bottom: none !important;
     background: #333 !important;
-    height: 47px !important;
     padding-left: 8px !important;
 }
 
@@ -130,7 +173,7 @@ body.view-layout #teacss-layer > .editor-panel > .preview-toolbar > .close-butto
 
 .teacss-ui .preview-toolbar button.ui-button {
   float: none;
-  margin: 8px 5px 0 0 !important;
+  margin: 8px 5px 0 0;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
