--- a/view/editor/editor.css
+++ b/view/editor/editor.css
@@ -1,3 +1,11 @@
+.fa-home:before {
+  position: absolute;
+  top: 3px;
+  right: 275px;
+  font-size: 20px;
+  color: #71a0d0;
+}
+
 #beejee_info {
   margin: 0 auto 0 450px;
   width: 450px;
@@ -5,6 +13,9 @@
   z-index: 50000;
   visibility: `;
   position: absolute;
+}
+body.view-layout #beejee_info{
+  display: none;
 }
 #beejee_info > div.title {
   float: left;
