--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -630,12 +630,12 @@ body {
     bottom: 0px;
     left: 170px;
     right: 0px;
-    padding: 5px 20px;
     border-top: 5px solid #71a0d0;
     background: #333;
     text-align: center;
-    height: 40px;
-    line-height: 40px;
+    box-sizing: border-box;
+    height: 55px;
+    line-height: 50px;
 }
 #footer #beejee_info {
     color: #aaa;
