--- a/view/editor/style/page.css
+++ b/view/editor/style/page.css
@@ -1815,19 +1815,43 @@ ol li {
   margin-top: 55px;
 }
 
-.services_1 .item_list .item {
-  float: left;
-  width: 33.33%;
-  padding: 10px 18px;
-  text-align: center;
+.services_1 .item_list .item_block {
+  display: table;
+  border-spacing: 18px 0px;
+  margin: 20px 0;
 }
 
-.services_1 .item_list .item .item_data {
+.services_1 .item_list .item_datas, 
+.services_1 .item_list .item_actions 
+{
+  display: table-row;
+}
+
+.services_1 .item_list .item_data,
+.services_1 .item_list .item_action
+{
+  display: table-cell;
+  padding: 0;
+  text-align: center;
   border: 1px solid #e3e3e3;
   background-color: #FFF;
+  width: 33.333%;
 }
 
-.services_1 .item_list .item .img {
+.services_1 .item_list .item_data:empty,
+.services_1 .item_list .item_action:empty {
+  border: none;
+  background: none;
+}
+
+.services_1 .item_list .item_data {
+  border-bottom: none;
+}
+.services_1 .item_list .item_action {
+  border-top: none;
+}
+
+.services_1 .item_list .img {
   width: 100%;
   height: 250px;
   margin-bottom: 20px;
@@ -1837,7 +1861,7 @@ ol li {
   background-position: center center;
 }
 
-.services_1 .item_list .item .name {
+.services_1 .item_list .name {
   padding: 20px;
   color: #2b2b2b;
   font-size: 20px;
@@ -1846,7 +1870,7 @@ ol li {
   line-height: 130%;
 }
 
-.services_1 .item_list .item .desc {
+.services_1 .item_list .desc {
   padding: 0px 20px 16px 20px;
   color: #5c5c5c;
   font-size: 14px;
@@ -1854,24 +1878,24 @@ ol li {
   font-family: "Arial";
 }
 
-.services_1 .item_list .item .price {
+.services_1 .item_list .price {
   padding: 0px 20px 18px 20px;
   color: #2b2b2b;
   font-size: 20px;
   font-family: "Arial";
 }
 
-.services_1 .item_list .item .btn_wrap {
+.services_1 .item_list .btn_wrap {
   padding: 0px 30px 20px;
   display: inline-block;
 }
 
 @media all and (max-width:1199px) {
-  .services_1 .item_list .item .img_wrap {
+  .services_1 .item_list .img_wrap {
     height: 190px;
   }
 
-  .services_1 .item_list .item .img_wrap .img {
+  .services_1 .item_list .img_wrap .img {
     height: 190px;
   }
 }
