--- a/view/editor/style/fonts.css
+++ b/view/editor/style/fonts.css
@@ -6,7 +6,7 @@
     url("fonts/OpenSansRegular.woff") format("woff"),
     url("fonts/OpenSansRegular.ttf") format("truetype");
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
 }
 /* font-family: "OpenSansLight"; */
 @font-face {
