--- a/view/editor/lib/alertify/css/themes/default.css
+++ b/view/editor/lib/alertify/css/themes/default.css
@@ -1,3 +1,8 @@
+/**
+ * alertifyjs 1.4.1 http://alertifyjs.com
+ * AlertifyJS is a javascript framework for developing pretty browser dialogs and notifications.
+ * Copyright 2015 Mohammad Younes <Mohammad@alertifyjs.com> (http://alertifyjs.com) 
+ * Licensed under MIT <http://opensource.org/licenses/mit-license.php>*/
 .alertify .ajs-dialog {
   background-color: white;
   box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
@@ -60,4 +65,4 @@
 .alertify-notifier .ajs-message.ajs-warning {
   background: rgba(252, 248, 215, 0.95);
   border-color: #999;
-}
+} 
