--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -1071,8 +1071,9 @@ p.actions a.disabled, p.actions a[disabled] {
 }
 .template-select label {
     width: 240px;
-    float: left;
-    margin: 0 10px 10px 0;
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 10px 20px 0;
     position: relative;
     padding-top: 160px;
     text-align: center;
