--- a/view/editor/style/page.css
+++ b/view/editor/style/page.css
@@ -49,8 +49,8 @@ ol li {
 .error{
     color: #EA493C !important;
     font-family: "Arial";
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 10px;
+    line-height: 14px;
     padding: 0;
     height: 0;
     text-align: right;
@@ -159,7 +159,7 @@ ol li {
   display: block;
   font-family: "Arial";
   font-size: 14px;
-  padding: 7px 0 6px;
+  padding: 8px 0 6px;
   text-align: left;
 }
 
@@ -182,8 +182,14 @@ ol li {
   text-align: center;
 }
 
+.form .form_fields input::placeholder,
+.form .form_fields textarea::placeholder
+ {
+    color: #ccc;
+}
+
 .form .form_fields input.form_field_text {
-  height: 38px;
+  height: 32px;
   padding: 0 6px;
   background-color: #fff;
   border: 1px solid #e8e8e8;
@@ -195,7 +201,7 @@ ol li {
 
 .form .form_fields textarea.form_field_textarea {
   height: auto;
-  padding: 0 6px;
+  padding: 9px 6px;
   background-color: #fff;
   border: 1px solid #e8e8e8;
   color: #5b5b5b;
@@ -203,10 +209,11 @@ ol li {
   font-size: 16px;
   width: 100%;
   resize: vertical;
+  min-height: 3em;
 }
 
 .form .form_submit {
-  margin: 30px 0 0 0;
+  margin: 25px 0 0 0;
 }
 
 .form .form_submit button.form_field_submit {
@@ -560,7 +567,7 @@ ol li {
   padding: 48px 0;
   color: #FFFFFF;
   font-family: "Arial";
-  min-height: 450px;
+  min-height: 400px;
 }
 
 .order_1 .dark {
@@ -1099,12 +1106,12 @@ ol li {
 
 .order_5 .form .form_data .form_fields input.form_field_text {
   height: 38px;
-  padding: 0px 7px;
+  padding: 0px 6px;
 }
 
 .order_5 .form .form_data .form_fields label {
   display: block;
-  padding: 8px 0 7px 0;
+  padding: 8px 0 8px 0;
   color: #FFFFFF;
   font-family: "Arial";
   font-size: 14px;
@@ -1114,7 +1121,7 @@ ol li {
 
 .order_5 .form .form_data .form_fields input.form_field_text {
   margin: 0px;
-  padding: 0px;
+  padding: 0px 8px;
   width: 100%;
   border: 1px solid #E8E8E8;
   background-color: #FFF;
